# nusy-kanban

./: CHANGELOG.md  Cargo.toml  FOSS.md  LICENSE  NATS-SERVER.md  README.md
crates/noesis-ship/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/noesis-ship/examples/: echo_service.rs
crates/noesis-ship/src/: channels.rs  connection.rs  event_bus.rs  job_queue.rs  kv.rs  lib.rs  object_store.rs  pubsub.rs  service.rs  types.rs
crates/nusy-arrow-core/: Cargo.toml  FOSS.md  SCHEMA-CHANGELOG.md
crates/nusy-arrow-core/src/: artifacts.rs  certainty.rs  cognitive_params.rs  epistemic.rs  graph_factory.rs  kg_store.rs  lib.rs  literals.rs  namespace.rs  parquet_atomic.rs  schema.rs  store.rs  triple_store.rs  y_layer.rs
crates/nusy-arrow-core/tests/: dual_path_why.rs  integration_test.rs  triple_store_integration.rs  y0_provenance.rs
crates/nusy-arrow-git/: API.md  ARCHITECTURE.md  Cargo.toml  README.md
crates/nusy-arrow-git/benches/: performance_gates.rs
crates/nusy-arrow-git/examples/: basic_workflow.rs  branch_merge.rs  crash_recovery.rs
crates/nusy-arrow-git/src/: blame.rs  checkout.rs  cherry_pick.rs  commit.rs  diff.rs  history.rs  lib.rs  merge.rs  object_store.rs  rebase.rs  refs.rs  remote.rs  revert.rs  save.rs
crates/nusy-arrow-git/tests/: cross_crate_test.rs  delta_spike.rs  integration_test.rs  lifecycle_test.rs  parquet_interop.rs  performance_gates.rs  stress_test.rs
crates/nusy-arrow-git/tests/common/: mod.rs
crates/nusy-codegraph/: Cargo.toml  README.md
crates/nusy-codegraph/src/: build_cache.rs  cargo_parser.rs  crate_graph.rs  crate_schema.rs  edges.rs  embeddings.rs  executor.rs  git_tools.rs  impact.rs  ingest.rs  ingest_pipeline.rs  lib.rs  mcp_bridge.rs  mcp_tools.rs  metrics.rs  module_resolver.rs  nats_service.rs  nats_sync.rs  parser.rs  python_parser.rs  python_resolver.rs  rename.rs  rust_parser.rs  schema.rs  scip_calls.rs  search.rs  semantic_diff.rs  test_discovery.rs  topo_sort.rs
crates/nusy-codegraph/tests/: agent_edit_spike.rs  cranelift_spike.rs  crate_graph_test.rs  cross_file_edges.rs  e2e_vision_test.rs  ingestion_test.rs  integration_test.rs  python_ingest_test.rs
crates/nusy-conductor/: Cargo.toml
crates/nusy-conductor/src/: ci_runner.rs  ci_service.rs  decomposer.rs  lib.rs  monitor.rs  reader.rs  review_cycle.rs  state.rs
crates/nusy-conductor/tests/: integration.rs
crates/nusy-cranelift/: Cargo.toml
crates/nusy-cranelift/src/: build_orchestrator.rs  cached_compiler.rs  error.rs  frontend.rs  lib.rs  test_runner.rs  translator.rs  wasm_compiler.rs  wasm_translator.rs
crates/nusy-cranelift/tests/: v13_frontend.rs  v13_graph_build.rs  v13_test_discovery_parity.rs  v13_wasm.rs
crates/nusy-evaluator/: Cargo.toml
crates/nusy-evaluator/src/: battery.rs  dashboard.rs  grader.rs  lib.rs  output.rs  provenance.rs  regression.rs  scenarios.rs  strict.rs
crates/nusy-evaluator/tests/: ex4335_runtime_budget.rs  v15_floor_replay.rs
crates/nusy-graph-query/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FOSS.md  LICENSE  README.md
crates/nusy-graph-query/examples/: basic_embedding.rs  graph_traversal.rs  hybrid_ranking.rs
crates/nusy-graph-query/src/: cache.rs  embedding.rs  fastembed_provider.rs  hybrid_rank.rs  lib.rs  subprocess.rs  traversal.rs
crates/nusy-graph-review/: Cargo.toml
crates/nusy-graph-review/.nusy-arrow/snapshots/012329dd-7b56-4506-a5b5-f4aedd5da7b8/: self.parquet
crates/nusy-graph-review/.nusy-arrow/snapshots/01a446b6-229f-49b1-9415-f1c2ab4047e0/: self.parquet
crates/nusy-graph-review/.nusy-arrow/snapshots/03714ee6-b3cb-4506-84f0-189795787896/: self.parquet
crates/nusy-graph-review/.nusy-arrow/snapshots/08121ef1-0a69-4a03-bf6f-3ebc921cedae/: self.parquet
crates/nusy-graph-review/.nusy-arrow/snapshots/085ce640-34b7-405b-bf77-ebf9fd268cf4/: self.parquet
crates/nusy-graph-review/.nusy-arrow/snapshots/09e8dd35-b205-45ca-9ee6-b458ad4e4590/: self.parquet
crates/nusy-graph-review/.nusy-arrow/snapshots/0fa91219-ee8b-4b8a-a8a5-2b053a388518/: self.parquet
crates/nusy-graph-review/src/: ci_store.rs  comments.rs  diff_view.rs  experiment_bridge.rs  gated_proposals.rs  hdd_loop.rs  kanban_bridge.rs  lib.rs  proposals.rs  safety_gates.rs  schema.rs
crates/nusy-graph-review/tests/: kanban_integration.rs  lifecycle.rs  safety_gate_matrix.rs
crates/nusy-kanban/: CLI-REFERENCE.md  Cargo.toml
crates/nusy-kanban-server/: Cargo.toml
crates/nusy-kanban-server/src/: main.rs
crates/nusy-kanban-server/src/handlers/: core.rs  mod.rs  pr.rs
crates/nusy-kanban-server/tests/: server_integration.rs
crates/nusy-kanban/ontology/: kanban.ttl
crates/nusy-kanban/skills/review/: SKILL.md
crates/nusy-kanban/skills/status/: SKILL.md
crates/nusy-kanban/skills/sync/: SKILL.md
crates/nusy-kanban/src/: backup.rs  base64.rs  comments.rs  critical_path.rs  crud.rs  dashboard_cli.rs  embeddings.rs  export.rs  file_index.rs  hdd.rs  item_type.rs  lib.rs  main.rs  nats_training_queue.rs  pr_cli.rs  regression_cli.rs  state_machine.rs  stats.rs  training_queue.rs  training_runner.rs  turtle_builder.rs  tutor_cli.rs  validate.rs
crates/nusy-kanban/tests/: dev_shapes_test.rs  ex4334_tutor_review.rs  ex4336_dashboard.rs  ex4337_regression.rs  nk_build_integration.rs  ontology_test.rs  pr_diff_integration.rs
crates/nusy-kanban/themes/: standard.ttl
crates/nusy-llm-backend/: Cargo.toml
crates/nusy-llm-backend/src/: claude.rs  error.rs  lib.rs  openai.rs
crates/nusy-llm-backend/tests/: integration.rs  vllm_integration.rs
crates/nusy-safety/: Cargo.toml
crates/nusy-safety/src/: battery.rs  domain_rules.rs  exam_runner.rs  hallucination_gate.rs  integrity.rs  justification.rs  lib.rs  main.rs  query_intent.rs  zorblaxia.rs
crates/nusy-tutor-record/: Cargo.toml
crates/nusy-tutor-record/examples/: dame_wonder.json
crates/nusy-tutor-record/schemas/: tutor-record-v1.json
crates/nusy-tutor-record/src/: lib.rs  review.rs
crates/nusy-tutor-record/tests/: ex4338_l0_plates.rs  ex4339_l1_plates.rs  ex4340_l3_plates.rs  ex4341_l2_plates.rs  round_trip.rs
(+232 files in other folders)
