[package]
name = "nusy-kanban"
description = "Arrow-native kanban engine — SHACL shapes, graph-native PRs, dual boards, NATS multi-agent collaboration"
version = "0.15.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/hankh95/nusy-kanban"
keywords = ["kanban", "arrow", "neurosymbolic", "nats", "project-management"]
categories = ["command-line-utilities", "data-structures"]
homepage = "https://nusy.dev"

[[bin]]
name = "nusy-kanban"
path = "src/main.rs"

[dependencies]
# Arrow ecosystem (published on crates.io)
arrow = { version = "57", features = ["prettyprint"] }
parquet = { version = "57", features = ["arrow"] }

# NuSy crates (published on crates.io)
nusy-arrow-core = "0.14.2"
nusy-arrow-git = "0.14.2"
nusy-graph-query = "0.14.2"
noesis-ship = "0.14.2"

# Core deps
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
sha2 = "0.10"

# Optional deps — only needed when respective features are enabled
nusy-graph-review = { version = "0.14.2", optional = true }
nusy-conductor = { version = "0.14.2", optional = true }
nusy-codegraph = { version = "0.14.2", optional = true }
async-nats = { version = "0.38", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["client", "pr"]
# NATS remote server mode
client = ["dep:async-nats", "dep:tokio"]
# Graph-native PR workflow (requires nusy-graph-review and nusy-codegraph)
pr = ["dep:nusy-graph-review", "dep:nusy-codegraph"]
# CI runner (requires nusy-conductor)
ci = ["dep:nusy-conductor"]
