[workspace]
members = [
    "crates/noesis-ship",
    "crates/nusy-arrow-core",
    "crates/nusy-arrow-git",
    "crates/nusy-codegraph",
    "crates/nusy-conductor",
    "crates/nusy-cranelift",
    "crates/nusy-evaluator",
    "crates/nusy-graph-query",
    "crates/nusy-graph-review",
    "crates/nusy-kanban",
    "crates/nusy-kanban-server",
    "crates/nusy-llm-backend",
    "crates/nusy-safety",
    "crates/nusy-tutor-record",
]
resolver = "2"

[workspace.package]
version = "0.15.4"
edition = "2024"
license = "MIT"
# CH-4702: the monorepo is private, so a github.com/hankh95/nusy-product-team
# link 404s for crates.io users. Point at nusy.dev until the V19 public repos
# (nusy-reasoners + v0.2 store extraction) exist, then repoint per crate.
repository = "https://nusy.dev"

[workspace.dependencies]
arrow = { version = "57", features = ["prettyprint"] }
parquet = { version = "57", features = ["arrow"] }
datafusion = "52"
rdf-fusion = { git = "https://codeberg.org/tschwarzinger/rdf-fusion.git", branch = "main" }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
tempfile = "3"
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
regex = "1"
criterion = { version = "0.5", features = ["html_reports"] }
async-nats = "0.38"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
futures = "0.3"
tracing = "0.1"
tantivy = "0.22"
