[package]
name = "nusy-llm-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared LLM inference client for NuSy — Claude + Ollama backends"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
wiremock = "0.6"
